--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset='utf-8'>
-  <title tp-model="cool.title">Temply Dynamic Template Engine - Test</title>
+  <title tp-model="cool.title">Temply Micro Template Engine for JavaScript</title>
 </head>
 <body>
 
