--- a/test.html
+++ b/test.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset='utf-8'>
-  <title tp-model="cool.title">Temply Micro Template Engine for JavaScript Tests</title>
+  <title>Temply Micro Template Engine for JavaScript Tests</title>
   <link rel="stylesheet" href="http://code.jquery.com/qunit/qunit-1.11.0.css">
 </head>
 <body>
