--- a/test.html
+++ b/test.html
@@ -8,8 +8,9 @@
 <body>
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
-  <script src="temply.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="http://code.jquery.com/qunit/qunit-1.11.0.js"></script>
+  <script src="temply.js"></script>
   <script src="tests.js"></script>
 </body>
 </html>
