added test for key events

--- a/test.html
+++ b/test.html
@@ -10,6 +10,7 @@
   <div id="qunit-fixture"></div>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="http://code.jquery.com/qunit/qunit-1.11.0.js"></script>
+  <script src="https://raw.github.com/gtramontina/keyvent.js/master/keyvent.min.js"></script>
   <script src="temply.js"></script>
   <script src="tests.js"></script>
 </body>
