--- a/index.html
+++ b/index.html
@@ -2,47 +2,53 @@
 <html>
 <head>
   <meta charset='utf-8'>
-  <title tp-model="cool.title">Temply Micro Template Engine for JavaScript</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>RSS Demo for Temply</title>
+  <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.0/css/bootstrap-combined.min.css" rel="stylesheet">
 </head>
 <body>
 
-  <h1>This is a {{test}} {{cool.test}}</h1>
-  <div>
-    <span>{{test}}</span>
-    {{name}}
+  <div class="container">
+    <div class="row-fluid page-header">
+      <h1>RSS Demo <small>for Temply Micro Template Engine</small></h1>
+    </div>
+    <div class="row-fluid">
+      <div id="feeds" class="span2">
+        <ul class="nav nav-pills nav-stacked">
+          <li class="nav-header">Available Feeds</li>
+          <li tp-repeat="feeds" tp-model="feed"><a href="javascript:void(0)" tp-model="feed.name"></a></li>
+        </ul>
+      </div>
+      <div id="stories" class="span10">
+        <div class="alert alert-info">Click on one of the RSS feeds on the left side to load the contents.</div>
+        <div class="story" tp-repeat="entries" tp-model="story">
+          <h3 tp-model="story.title"></h3>
+          <p tp-model="story.contentSnippet"></p>
+          <a href="#" tp-model="story.link"></a>
+          <hr class="bs-docs-separator" />
+        </div>
+      </div>
+    </div>
+    <footer class="row-fluid footer">
+      <hr class="bs-docs-separator" />
+      <h4>Copyright 2013 by Mathias Karstädt</h4>
+    </footer>
   </div>
-  <div>{{cool.more}}</div>
-  <div>{{cool.test}}</div>
-  <input type="text" tp-model="cool.more" />
-  <input type="text" tp-model="cool.test" />
-  <div tp-model="cool.more"></div>
 
-  Change the title of this page: <input type="text" tp-model="cool.title" />
-
-  <p>Das folgende wird wiederholt</p>
-
-  <table>
-    <tr tp-repeat="entries" tp-model="entry">
-      <td width="100">{{entry.name}}</td><td width="100">{{entry.age}}</td><td>{{cool.test}}</td>
-    </tr>
-  </table>
-
+  <script type="text/javascript" src="https://www.google.com/jsapi"></script>
   <script type="text/javascript" src="temply.js"></script>
+  <script type="text/javascript" src="demos/feedreader.js"></script>
   <script type="text/javascript">
+  google.load("feeds", "1");
+
   window.addEventListener("load", function() {
-    var temply = new Temply({
-      test: "Hello",
-      name: "World",
-      cool: {
-        more: "More..."
-      },
-      entries: [
-        {name: "Mathias", age: "36 Jahre alt"},
-        {name: "Mandy", age: "35 Jahre alt"},
-        {name: "Hans", age: "66 Jahre alt"}
-      ]
-    });
-    temply.run();
+
+    var reader = new FeedReader([
+      {name: "Railscasts", url: "http://feeds.feedburner.com/railscasts"},
+      {name: "Google Blog", url: "http://googleblog.blogspot.com/atom.xml"},
+      {name: "Engadget", url: "http://feeds.engadget.com/weblogsinc/engadget"}
+    ]);
+
   });
   </script>
 
