added navbar to demo

--- a/index.html
+++ b/index.html
@@ -7,7 +7,20 @@
   <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.0/css/bootstrap-combined.min.css" rel="stylesheet">
 </head>
 <body>
-
+  <div class="navbar">
+    <div class="navbar-inner">
+      <div class="container">
+        <a class="brand" href="https://github.com/webmatze/Temply">Temply.js</a>
+        <div class="nav-collapse">
+          <ul class="nav">
+            <li><a href="https://github.com/webmatze/Temply">Home</a></li>
+            <li><a href="https://github.com/webmatze/Temply/issues">Issues</a></li>
+            <li><a href="https://twitter.com/webmatze">@webmatze</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="container">
     <div class="row-fluid page-header">
       <h1>RSS Demo <small>for Temply Micro Template Engine</small></h1>
