--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="story" tp-repeat="entries" tp-model="story">
           <h3 tp-model="story.title"></h3>
           <p tp-model="story.contentSnippet"></p>
-          <a href="#" tp-model="story.link"></a>
+          <a href="{{story.link}}" tp-model="story.link"></a>
           <hr class="bs-docs-separator" />
         </div>
       </div>
