--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <div class="navbar">
     <div class="navbar-inner">
       <div class="container">
-        <a class="brand" href="http://temply.github.com">Temply.js</a>
+        <a class="brand" href="http://webmatze.github.com/Temply/">Temply.js</a>
         <div class="nav-collapse">
           <ul class="nav">
-            <li><a href="http://temply.github.com">Home</a></li>
+            <li><a href="http://webmatze.github.com/Temply/">Home</a></li>
             <li><a href="demos/feedreader.html">Demo</a></li>
             <li><a href="https://github.com/webmatze/Temply/issues">Issues</a></li>
             <li><a href="http://webmatze.github.com">by webmatze</a></li>
@@ -30,7 +30,7 @@
       <div id="feeds" class="span2">
         <ul class="nav nav-pills nav-stacked">
           <li class="nav-header">Links</li>
-          <li><a href="http://temply.github.com">Home</a></li>
+          <li><a href="http://webmatze.github.com/Temply/">Home</a></li>
           <li><a href="demos/feedreader.html">Feedreader Demo</a></li>
         </ul>
       </div>
