--- a/demos/feedreader.html
+++ b/demos/feedreader.html
@@ -24,7 +24,7 @@
   </div>
   <div class="container">
     <div class="row-fluid page-header">
-      <h1>RSS Demo <small>for Temply Micro Template Engine</small></h1>
+      <h1>Feedreader Demo <small>for Temply.js Micro Template Engine</small></h1>
     </div>
     <div class="row-fluid">
       <div id="feeds" class="span2">
