added github repo link

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
           <ul class="nav">
             <li><a href="http://webmatze.github.com/Temply/">Home</a></li>
             <li><a href="demos/feedreader.html">Demo</a></li>
+            <li><a href="https://github.com/webmatze/Temply/">GitHub Repository</a></li>
             <li><a href="https://github.com/webmatze/Temply/issues">Issues</a></li>
             <li><a href="http://webmatze.github.com">by webmatze</a></li>
           </ul>
