added repo link to about section

--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
             <li class="text-success">Google Chrome 23 (Mac)</li>
           </ul>
           <p>But other versions or browsers could work, too.</p>
+          <h3>Source Code</h3>
+          <p>You can find the source code for the library on GitHub:</p>
+          <a href="https://github.com/webmatze/Temply/">https://github.com/webmatze/Temply/</a>
         </section>
         <hr class="bs-docs-separator" />
         <section id="usage">
